src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Budget_Range__c</fullName>
        <label>Budget Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5000</fullName>
                </value>
                <value>
                    <fullName>5000 - 25000</fullName>
                </value>
                <value>
                    <fullName>25000 - 50000</fullName>
                </value>
                <value>
                    <fullName>50000 - 100000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Attendees__c</fullName>
        <description>Estimated number of attendees</description>
        <label>Estimated Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Choose a event type you want to organize</description>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Event_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Engagement_Level__c</fullName>
        <label>Lead Engagement Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Negotation_Notes__c</fullName>
        <label>Negotation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Methods</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Date__c</fullName>
        <label>Preferred Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Budget_Range_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
ISPICKVAL( Status , &quot;Working - Qualified&quot;),
ISPICKVAL( Status , &quot;Working - Proposal Sent&quot;),
ISPICKVAL( Status , &quot;Closed - Negotiation&quot;),
ISPICKVAL( Status , &quot;Closed - Converted&quot;)
),
ISBLANK( TEXT(Budget_Range__c) )
)</errorConditionFormula>
        <errorDisplayField>Budget_Range__c</errorDisplayField>
        <errorMessage>Complete this field with a value from list.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Estimated_Attendees_must_be_at_least_1</fullName>
        <active>true</active>
        <errorConditionFormula>Estimated_Attendees__c &lt; 1</errorConditionFormula>
        <errorDisplayField>Estimated_Attendees__c</errorDisplayField>
        <errorMessage>Complete this field with a positive value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preferred_Contact_Method_Is_Required</fullName>
        <active>true</active>
        <description>Ask contact about the preferred method of contact</description>
        <errorConditionFormula>AND(
OR(
 ISPICKVAL( Status , &quot;Working - Contacted&quot;),
ISPICKVAL( Status , &quot;Working - Qualified&quot;),
ISPICKVAL( Status , &quot;Working - Proposal Sent&quot;),
ISPICKVAL( Status , &quot;Closed - Negotiation&quot;)
),
ISBLANK(TEXT( Preferred_Contact_Method__c ))
)</errorConditionFormula>
        <errorDisplayField>Preferred_Contact_Method__c</errorDisplayField>
        <errorMessage>At this stage of lead you need to know what is customer preferred contact method</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preferred_Date_cannot_be_in_the_past</fullName>
        <active>true</active>
        <errorConditionFormula>Preferred_Date__c &lt; NOW()</errorConditionFormula>
        <errorDisplayField>Preferred_Date__c</errorDisplayField>
        <errorMessage>Complete this field with a correct date in future.</errorMessage>
    </validationRules>
</CustomObject>